upgrade demo(display video on SurfaceView): extract VideoUtil and VideoSurface class.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".media.ActVideoDemo1" />
+        <activity android:name=".media.ActVideoDemo2" />
     </application>
 
 </manifest>
