--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         </activity>
         <activity android:name=".media.ActVideoDemo1" />
         <activity android:name=".media.ActVideoDemo2" />
+        <activity android:name=".media.ActVideoDemo201" />
     </application>
 
 </manifest>
